(Fix) Refactor the code to output only one executable (Impl.) The program now takes flags (ex. `-e` and `-o`)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,10 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(encryptor "encryptor.cpp" "get_secret_input.h" "get_secret_input.cpp")
-add_executable(decryptor "decryptor.cpp" "get_secret_input.h" "get_secret_input.cpp")
+add_executable(encryptor "encryptor.cpp" "utilities/get_secret_input.h" "utilities/get_secret_input.cpp"
+    "utilities/exception.h" "include/cxxopts.hpp" "src/encrypt.hpp" "src/decrypt.hpp" "src/encrypt.cpp" "src/decrypt.cpp")
+
+target_include_directories(encryptor PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 if(WIN32)
     find_package(unofficial-sodium REQUIRED)
@@ -16,14 +18,11 @@ if(WIN32)
     endif()
 
     target_link_libraries(encryptor PRIVATE sodium::sodium)
-    target_link_libraries(decryptor PRIVATE sodium::sodium)
 else()
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(SODIUM REQUIRED libsodium)
 
     target_include_directories(encryptor PRIVATE ${SODIUM_INCLUDE_DIRS})
-    target_include_directories(decryptor PRIVATE ${SODIUM_INCLUDE_DIRS})
 
     target_link_libraries(encryptor PRIVATE ${SODIUM_LIBRARIES})
-    target_link_libraries(decryptor PRIVATE ${SODIUM_LIBRARIES})
 endif()
